[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "touchstone-viewer"
version = "0.1.0"
description = "Interactive S11 and Smith chart viewer for Touchstone .s1p files"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=2.0",
  "pyqtgraph>=0.13.7",
  "PySide6>=6.8",
]

[project.scripts]
touch = "touchstone_viewer.app:main"
touch-test = "touchstone_viewer.test_runner:main"
touchstone-viewer = "touchstone_viewer.app:main"

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-cov>=6.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["touchstone_viewer"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
